concord-console: prevent scrollbar from repositioning page content (#1398)

--- a/console2/src/index.css
+++ b/console2/src/index.css
@@ -25,6 +25,7 @@ html {
 
 body {
   min-height: 100% !important;
+  margin-right: calc(-1 * (100vw - 100%));
 }
 
 #root {
